--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="timeline-content">
                     <div class="timeline-date">Aug 2024 – Present</div>
                     <h3 class="timeline-title">Software Engineer</h3>
-                    <p><strong>Corefront Technologies Pvt Ltd</strong></p>
+                    <p><strong>Grayradiant Data Service Pvt. Ltd. </strong></p>
                     <ul>
                         <li>Built and deployed fully responsive websites using React.js</li>
                         <li>Developed UI components with React functional components and Hooks</li>
