--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             <div class="project-card">
                 <div class="project-header">
-                    <h3>TODO List Application</h3>
+                    <h3>Canban Board</h3>
                 </div>
                 <div class="project-body">
                     <p>Responsive web app with full CRUD operations for task management.</p>
@@ -202,6 +202,8 @@
                         <span class="tech-tag">React.js</span>
                         <span class="tech-tag">Bootstrap</span>
                         <span class="tech-tag">Local Storage</span>
+                        <a href="https://kanban-frontend-self.vercel.app/" class="tech-tag">View</a>
+
                     </div>
                 </div>
             </div>
